--- a/dictionary/templates/dictionary/word_search.html
+++ b/dictionary/templates/dictionary/word_search.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block style %}
-<link rel="stylesheet" type='text/css' href="{% static 'dictionary/css/word_search.css' %}" />
+<link rel="stylesheet" type='text/css' href="{% static 'css/dictionary/word_search.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -42,7 +42,7 @@
         </div>
         <div class="d-flex">
           <div class="btn-link-wrapper d-inline-block ml-2">
-            <a href="" class="btn-link disable">Details</a>
+            <a href="{% url 'word_detail' slug=word.slug %}" class="btn-link disable">Details</a>
           </div>
         </div>
       </div>
