--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -10,6 +10,7 @@
     {% load static %}
     <link rel="stylesheet" type='text/css' href="{% static 'config/css/cloud.css' %}" />
     <link rel="stylesheet" type='text/css' href="{% static 'config/css/button.css' %}" />
+	<link rel="stylesheet" type='text/css' href="{% static 'config/css/navbar.css' %}" />
     <title>Fluentcard</title>
 </head>
 
@@ -18,7 +19,9 @@
 	<div class="main-header navbar-fixed-top" id="navbar">
 		<nav class="main-header__nav">
 			<ul class="main-header__item-list">
+				<li class="main-header__item"><a href="{% url 'deck_list' %}">Decks list</a></li>
 				<li class="main-header__item"><a href="{% url 'word_search' %}">Dictionary</a></li>
+				<li class="main-header__item"><a href="{% url 'logout' %}">Log out</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -86,52 +89,13 @@
 			-webkit-filter: blur(4px);
 		}
 
-		.page-title {
-			text-align: center;
-		}
-
-		.main-header {
-			width: 100%;
-			height: 2rem;
-			top: 0px;
-		}
-
-		.main-header__nav {
-			height: 100%;
-			display: flex;
-			float: right;
-			align-items: center;
-			margin-top: 30px;
-			margin-right: 50px;
-		}
-
-		.main-header__item-list {
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			display: flex;
-		}
-
-		.main-header__item {
-			margin: 0 1rem;
-			padding: 0;
-		}
-
-		.main-header__item a {
-			text-decoration: none;
-			color: var(--deep_purple);
-			font-weight: bold;
-			padding: 7px 40px 7px 12px;
-			font-size: 16px;
-		}
-
-		.main-header__item a:hover {
-			color: var(--yellow);
-		}
-
 		.modal {
 			display: none;
 			position: fixed;
+		}
+
+		.page-title {
+			text-align: center;
 		}
 
 		.card {
