--- a/decks/templates/decks/deck_test.html
+++ b/decks/templates/decks/deck_test.html
@@ -74,6 +74,7 @@
 
   function checker(e) {
     $(e).css('border-color', 'blue');
+    $(e).addClass('disabled');
     checkAnswer(e.textContent, e);
   }
 
