--- a/dictionary/templates/dictionary/word_search.html
+++ b/dictionary/templates/dictionary/word_search.html
@@ -42,7 +42,7 @@
         </div>
         <div class="d-flex">
           <div class="btn-link-wrapper d-inline-block ml-2">
-            <a href="{% url 'word_detail' slug=word.slug %}" class="btn-link disable">Details</a>
+            <a href="{% url 'word_detail' slug=word.slug %}" class="btn-link">Details</a>
           </div>
         </div>
       </div>
