--- a/decks/templates/decks/deck_test.html
+++ b/decks/templates/decks/deck_test.html
@@ -26,8 +26,14 @@
 
   <div class="col-md-6 answer-container" style="display: none !important;">
     <div class="card">
-      <h3 class="card-title" id="card-title"><i class="fas fa-volume-up"></i></h3>
-      <div><span id="card-type">Definitions: </span><p id="card-content"></p></div>
+      <h3 class="card-title" id="word-slug"></h3>
+      <div class="card-content">
+        <div class="spelling mb-1">
+          <p id="word-kanji"></p>
+          <span id="word-hiragana"></span>
+        </div>
+        <p id="word-definitions"></p>
+      </div>
     </div>
 
     <div class="mt-3">
