--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -106,6 +106,7 @@
 			box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
 			margin-bottom: 15px;
 			padding: 1.5em;
+			width: 100%;
 		}
 
 		.card-title {
