add progress page

--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -7,11 +7,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" />
-    {% load static %}
-    <link rel="stylesheet" type='text/css' href="{% static 'config/css/cloud.css' %}" />
-    <link rel="stylesheet" type='text/css' href="{% static 'config/css/button.css' %}" />
+
+	{% load static %}
+	<link rel="stylesheet" type='text/css' href="{% static 'config/css/base.css' %}" />
+	<link rel="stylesheet" type='text/css' href="{% static 'config/css/cloud.css' %}" />
+	<link rel="stylesheet" type='text/css' href="{% static 'config/css/button.css' %}" />
 	<link rel="stylesheet" type='text/css' href="{% static 'config/css/navbar.css' %}" />
-    <title>Fluentcard</title>
+
+	<title>FluentCard</title>
 </head>
 
 <body>
@@ -21,6 +24,7 @@
 			<ul class="main-header__item-list">
 				<li class="main-header__item"><a href="{% url 'deck_list' %}">Decks list</a></li>
 				<li class="main-header__item"><a href="{% url 'word_search' %}">Dictionary</a></li>
+				<li class="main-header__item"><a href="{% url 'progress' %}">Progress</a></li>
 				<li class="main-header__item"><a href="{% url 'logout' %}">Log out</a></li>
 			</ul>
 		</nav>
@@ -45,74 +49,6 @@
 		</div>
 	</div>
 
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-		:root {
-			--red: #ef233c;
-			--darkred: #c00424;
-			--pastel_purple: #e6d1f2;
-			--purple: #4D59FB;
-			--deep_purple: #2A265F;
-			--yellow: #ffeb3b;
-
-		}
-
-		* {
-			padding: 0;
-			margin: 0;
-			box-sizing: border-box;
-			font-family: "Poppins", sans-serif;
-		}
-
-		body {
-			background-color: var(--pastel_purple);
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			flex-direction: column;
-			/* min-height: 100vh; */
-			overflow-x: hidden;
-			font-size: 1.5em;
-		}
-
-		.bg {
-			width: 90vw;
-			margin: 30px;
-		}
-
-		.container {
-			margin-top: 30px;
-		}
-
-		.blur {
-			-webkit-filter: blur(4px);
-		}
-
-		.modal {
-			display: none;
-			position: fixed;
-		}
-
-		.page-title {
-			text-align: center;
-		}
-
-		.card {
-			display: inline-block;
-			padding: 30px;
-			background: white;
-			border-radius: 12px;
-			box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
-			margin-bottom: 15px;
-			padding: 1.5em;
-			width: 100%;
-		}
-
-		.card-title {
-			font-size: 30px;
-		}
-	</style>
 	{% block style %}{% endblock %}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
