--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,12 +1,19 @@
 {% extends "config/base.html" %}
 
-{% block content %}      
+{% block content %}
 
 {% load crispy_forms_tags %}
 
-<!--Login--> 
+<!--Login-->
 <div class="container py-5">
   <h1>Login</h1>
+  {% if messages %}
+  {% for message in messages %}
+  <li class="alert alert-{{ message.tags }}">
+    {{ message }}
+  </li>
+  {% endfor %}
+  {% endif %}
   <form method="POST">
     {% csrf_token %}
     {{ login_form|crispy }}
