--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,15 +1,22 @@
 {% extends "config/base.html" %}
 
-{% block content %}      
+{% block content %}
 
-{% load crispy_forms_tags %}       
+{% load crispy_forms_tags %}
 
-<!--Register--> 
+<!--Register-->
 <div class="container py-5">
 	<h1>Register</h1>
+	{% if messages %}
+	{% for message in messages %}
+	<li class="alert alert-{{ message.tags }}">
+	  {{ message }}
+	</li>
+	{% endfor %}
+	{% endif %}
 	<form method="POST">
 		{% csrf_token %}
-		{{ register_form|crispy }}                    
+		{{ register_form|crispy }}
 		<button class="btn btn-primary" type="submit">Register</button>
 	</form>
 	<p class="text-center">If you already have an account, <a href="{% url 'login'%}">login</a> instead.</p>
