--- a/dictionary/static/css/dictionary/word_detail.css
+++ b/dictionary/static/css/dictionary/word_detail.css
@@ -97,3 +97,16 @@ img {
 select {
     font-size: 1.5rem;
 }
+
+@media only screen and (max-width: 800px){
+    .card {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 801px){
+    .card {
+        width: 45%;
+        margin-right: 10px;
+    }
+}
