add deck cards page

--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -34,7 +34,7 @@
 	<div class="deck">
 		<div class="deck-preview">
 			<h2>Deck</h2>
-			<a href="#">View all cards <i class="fas fa-chevron-right"></i></a>
+			<a href="{% url 'deck_cards' deck_id=deck.id %}">View all cards <i class="fas fa-chevron-right"></i></a>
 		</div>
 		<div class="deck-info">
 			<div class="progress-container">
