add role play function

--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -24,6 +24,7 @@
 				<li class="main-header__item"><a href="{% url 'deck_list' %}">Decks list</a></li>
 				<li class="main-header__item"><a href="{% url 'word_search' %}">Dictionary</a></li>
 				<li class="main-header__item"><a href="{% url 'progress' %}">Progress</a></li>
+				<li class="main-header__item"><a href="{% url 'prompt_list' %}">Role Play</a></li>
 				<li class="main-header__item"><a href="{% url 'logout' %}">Log out</a></li>
 			</ul>
 		</nav>
