update chatting request function

--- a/roleplay/templates/roleplay/prompt_list.html
+++ b/roleplay/templates/roleplay/prompt_list.html
@@ -15,7 +15,7 @@
         <span class="fa fa-star"></span>
         {% endif %}
         {% endfor %}
-        <p>{{ prompt.creator.username }}</p>
+        <p>author: {{ prompt.creator.username }}</p>
         <p>{{ prompt.description }}</p>
     </div>
     {% endfor %}
