--- a/config/static/config/css/navbar.css
+++ b/config/static/config/css/navbar.css
@@ -10,7 +10,7 @@
     float: right;
     align-items: center;
     margin-top: 30px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 .main-header__item-list {
@@ -21,7 +21,7 @@
 }
 
 .main-header__item {
-    margin: 0 1rem;
+    margin: 0;
     padding: 0;
 }
 
