--- a/decks/static/decks/css/deck_list.css
+++ b/decks/static/decks/css/deck_list.css
@@ -91,6 +91,7 @@
 #learn-deck-btn:hover {
     /* border: 1px solid var(--purple); */
     color: white;
+    background-color: blue;
 }
 
 @media only screen and (max-width: 600px){
