--- a/roleplay/templates/roleplay/chat.html
+++ b/roleplay/templates/roleplay/chat.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="triangle"></div>
                 <div class="message" id="first_message">
-                    {{ first_message }}
+                    {{ first_message }} <i class="fa fa-volume-up"></i>
                 </div>
             </li>
             <li class="me">
@@ -65,25 +65,6 @@
 
 {% block script %}
 <script>
-    const decoder = new TextDecoder();
-    const encoder = new TextEncoder();
-    const first_msg = document.getElementById('first_message').textContent;
-
-    const tokenize = (first_msg) => {
-        let myArray = JSON.parse(first_msg);
-        let msg_str = ''
-        for (let i = 0; i < myArray.length; i++) {
-            let byteArray = encoder.encode(myArray[i]);
-            let decoded_str = decoder.decode(byteArray);
-            let href = "{% url 'word_detail' slug=12345 %}".replace(/12345/, decoded_str);
-            msg_str += `<a href=${href}> ${decoded_str} </a> `;
-        }
-        msg_str += '<i class="fa fa-volume-up"></i>'
-        return msg_str
-    }
-
-    // document.getElementById('first_message').innerHTML = tokenize(first_msg);
-
     const sendMsg = () => {
         const msgText = document.getElementById('msgText').value;
         document.getElementById('msgText').value = '';
@@ -111,7 +92,7 @@
                 const newYouChat = youChatBox.cloneNode(true);
                 chat.appendChild(newYouChat);
                 let messageLength = document.getElementsByClassName('message').length;
-                document.getElementsByClassName('message')[messageLength - 1].innerHTML = (data.response);
+                document.getElementsByClassName('message')[messageLength - 1].innerHTML = data.response + ' <i class="fa fa-volume-up"></i>';
             },
             error: (error) => {
                 console.log(error);
