--- a/decks/templates/decks/deck_cards.html
+++ b/decks/templates/decks/deck_cards.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 <div>
+    <h1 class="text-center mt-3">List of cards in deck: {{deck_name}}</h1>
     <div class="search_results">
         <ul class="cards">
             {% for card in cards%}
