--- a/roleplay/templates/roleplay/chat.html
+++ b/roleplay/templates/roleplay/chat.html
@@ -56,7 +56,7 @@
             <textarea placeholder="Type your message" id="msgText"></textarea>
             <div class="d-flex submit">
                 <a class="d-inline-block" onclick="sendMsg()">Send</a>
-                <a class="d-inline-block sound">Voice <i class="fa fa-microphone"></i></a>
+                <a class="d-inline-block sound" id="recordStart">Voice <i class="fa fa-microphone"></i></a>
             </div>
         </footer>
     </div>
@@ -65,6 +65,29 @@
 
 {% block script %}
 <script>
+    const chatAudio = (text) => {
+        console.log(text);
+        $.ajax({
+            url: "{% url 'audio' %}",
+            type: "POST",
+            dataType: "json",
+            data: {
+                "sentence": text,
+            },
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCookie("csrftoken"),
+            },
+            success: (data) => {
+                const sound = new Audio(data.src);
+                sound.play();
+            },
+            error: (error) => {
+                console.log(error);
+            }
+        })
+    }
+
     const sendMsg = () => {
         const msgText = document.getElementById('msgText').value;
         document.getElementById('msgText').value = '';
@@ -93,11 +116,27 @@
                 chat.appendChild(newYouChat);
                 let messageLength = document.getElementsByClassName('message').length;
                 document.getElementsByClassName('message')[messageLength - 1].innerHTML = data.response + ' <i class="fa fa-volume-up"></i>';
+                document.getElementsByClassName('message')[messageLength - 1].lastElementChild.style.cursor = 'pointer';
+                document.getElementsByClassName('message')[messageLength - 1].lastElementChild.onclick = function () { return chatAudio(data.response) };
             },
             error: (error) => {
                 console.log(error);
             }
         })
+    }
+</script>
+<script>
+    document.getElementById('recordStart').onclick = () => {
+        let recognization = new webkitSpeechRecognition();
+        recognization.lang = "ja-JP";
+        recognization.onstart = () => {
+            console.log("Listening...");
+        }
+        recognization.onresult = (e) => {
+            var transcript = e.results[0][0].transcript;
+            document.getElementById("msgText").value = transcript;
+        }
+        recognization.start();
     }
 </script>
 {% endblock %}
