--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -21,11 +21,12 @@
 	<div class="main-header navbar-fixed-top" id="navbar">
 		<nav class="main-header__nav">
 			<ul class="main-header__item-list">
-				<li class="main-header__item"><a href="{% url 'deck_list' %}">Decks list</a></li>
+				<li class="main-header__item"><a href="{% url 'deck_list' %}">Decks</a></li>
 				<li class="main-header__item"><a href="{% url 'word_search' %}">Dictionary</a></li>
 				<li class="main-header__item"><a href="{% url 'progress' %}">Progress</a></li>
-				<li class="main-header__item"><a href="{% url 'prompt_list' %}">Role Play</a></li>
-				<li class="main-header__item"><a href="{% url 'logout' %}">Log out</a></li>
+				<li class="main-header__item"><a href="{% url 'prompt_list' %}">RolePlay</a></li>
+				<li class="main-header__item"><a href="{% url 'help' %}">Help</a></li>
+				<li class="main-header__item"><a href="{% url 'logout' %}">Logout</a></li>
 			</ul>
 		</nav>
 	</div>
