--- a/config/static/config/css/base.css
+++ b/config/static/config/css/base.css
@@ -73,3 +73,9 @@ input[type='text'] { font-size: 0.8em; }
     color: red;
     font-size: 1em;
 }
+
+textarea {
+    height: 100px;
+    width: 98%;
+    padding: 1%;
+}
