--- a/roleplay/templates/roleplay/chat.html
+++ b/roleplay/templates/roleplay/chat.html
@@ -24,7 +24,7 @@
         <header>
             <div class="d-flex">
                 <h2 class="d-inline-block">{{ prompt_title }}</h2>
-                <a class="d-inline-block end" href="">End <i class="fa fa-sign-out"></i></a>
+                <a class="d-inline-block end" href="{% url 'chat_review' %}">End <i class="fa fa-sign-out"></i></a>
             </div>
         </header>
 
@@ -65,14 +65,18 @@
 
 {% block script %}
 <script>
-    const synth = window.speechSynthesis;
-    const voices = synth.getVoices();
-
     const chatAudio = (text) => {
+        const synth = window.speechSynthesis;
+        const voices = synth.getVoices();
         const utterThis = new SpeechSynthesisUtterance(text);
         utterThis.lang = "ja-JP";
         synth.speak(utterThis);
     }
+
+    document.getElementsByClassName('fa fa-volume-up')[0].style.cursor = 'pointer';
+    document.getElementsByClassName('fa fa-volume-up')[0].onclick = function () {
+        chatAudio(document.getElementById('first_message').textContent);
+    };
 
     const sendMsg = () => {
         const msgText = document.getElementById('msgText').value;
